[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ui/ui_btn_bg_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/font/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UbuntuTitleFont.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/font/Anton-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://popups/WoodPanelUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/ui_lateral_shadow.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0.231373, 0.196078, 0.196078, 1 )
extra_spacing_char = 4
font_data = ExtResource( 5 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="WoodPanelUi" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -225.0
margin_right = 150.0
margin_bottom = 225.0

[node name="L1" type="TextureRect" parent="WoodPanelUi"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
anchor_bottom = 1.0
margin_right = 35.0
texture = ExtResource( 8 )
expand = true

[node name="L2" type="TextureRect" parent="WoodPanelUi"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -225.0
margin_bottom = 225.0
texture = ExtResource( 8 )
expand = true
flip_h = true

[node name="VBox" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -111.5
margin_right = 70.0
margin_bottom = 201.5
custom_constants/vseparation = -3

[node name="btn2" type="Button" parent="VBox"]
margin_right = 140.0
margin_bottom = 65.0
rect_min_size = Vector2( 140, 65 )
rect_pivot_offset = Vector2( 70, 32.5 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 1 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn2"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="VBox/btn2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 2 )
text = "Lenguaje
ingles"
align = 1
valign = 1
autowrap = true

[node name="btn3" type="Button" parent="VBox"]
margin_top = 62.0
margin_right = 140.0
margin_bottom = 127.0
rect_min_size = Vector2( 140, 65 )
rect_pivot_offset = Vector2( 70, 32.5 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 1 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn3"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="VBox/btn3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 2 )
text = "pantalla completa"
align = 1
valign = 1
autowrap = true

[node name="btn4" type="Button" parent="VBox"]
margin_top = 124.0
margin_right = 140.0
margin_bottom = 189.0
rect_min_size = Vector2( 140, 65 )
rect_pivot_offset = Vector2( 70, 32.5 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 1 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn4"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="VBox/btn4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 2 )
text = "Clear Data"
align = 1
valign = 1
autowrap = true

[node name="btn5" type="Button" parent="VBox"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 186.0
margin_right = 140.0
margin_bottom = 251.0
rect_min_size = Vector2( 140, 65 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 1 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn5"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="VBox/btn5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 1
valign = 1
autowrap = true

[node name="btn6" type="Button" parent="VBox"]
margin_top = 248.0
margin_right = 140.0
margin_bottom = 313.0
rect_min_size = Vector2( 140, 65 )
rect_pivot_offset = Vector2( 70, 32.5 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 1 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn6"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="VBox/btn6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 1
valign = 1
autowrap = true

[node name="lbl_title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 21.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "Options"
align = 1
valign = 1
autowrap = true

[node name="Transition" parent="." instance=ExtResource( 7 )]
visible = false
